# pmf_project

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  README_old.md  main.cpp
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
docs/: potentials.md  rebuild_from_good_parts.md  rewrite_plan.md
examples/: optimizer_config.json  run_config.json
include/: CameraController.h  Config.h  Corridor.h  HeadlessSimulation.h  JsonRunIO.h  Particle.h  PhysicsForces.h  Rect.h  RunConfig.h  Simulation.h  SimulationCore.h  SimulationStats.h  Vector2.h  VisualConfig.h  Zone.h
runs/gradient_descent/: best_result.json  best_run_config.json  history.csv  summary.json
scripts/: gradient_descent.py  plot_optimization.py
src/: CameraController.cpp  Corridor.cpp  HeadlessSimulation.cpp  JsonRunIO.cpp  Particle.cpp  PhysicsForces.cpp  Simulation.cpp  SimulationCore.cpp  SimulationStats.cpp  Zone.cpp
